# surfaceduino

./: .gitignore  README.md  app.yaml  pyproject.toml
assets/: app.js  index.html  style.css
assets/static/: index-BIr5CfkD.css  index-DJ7-cwkW.js
config/: agent_presets.json  agent_presets.schema.json  surface.json
docs/: architecture.md  camera-connection.md  wiring.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: AgentTile.tsx  AppHeader.tsx  DrumPads.tsx  EventLog.tsx  PianoKeyboard.tsx  StatusPills.tsx  VideoFeed.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
frontend/src/hooks/: useEngineMode.ts  useEventAudio.ts  useSurfaceState.ts
frontend/src/lib/: api.ts  audio.ts  engine.ts
frontend/src/screens/: AgentConsoleScreen.tsx  HomeScreen.tsx  InstrumentScreen.tsx
glyph/glyph_imu/: glyph_imu.ino
glyph/glyph_ir/: glyph_ir.ino
glyph/i2c_scan/: i2c_scan.ino
python/: main.py
python/surfaceos/: __init__.py  agents.py  config.py  detector.py  events.py  fingertips.py  fusion.py  handtracking.py  renderer.py
python/surfaceos/inputs/: __init__.py  movement.py  remote_frames.py
scripts/: fetch_models.sh  generate_surface.py  glyph_dashboard.py  glyph_tap_relay.py  local_engine.py  mac_camera_feed.py  probe_camera.py  run_mac_camera.sh  test.sh
sketch/: sketch.ino
tests/: test_config.py  test_detector.py  test_fingertips.py  test_fusion.py  test_handtracking.py  test_movement_adapter.py  test_remote_frames.py
